@startuml Diagrama Entidad-Relación - Sistema Chronos

!theme plain
skinparam linetype ortho
skinparam packageStyle rectangle
skinparam shadowing false
skinparam roundcorner 10
skinparam maxMessageSize 60
skinparam defaultFontSize 10
skinparam entityFontSize 9
skinparam entityFontStyle bold

title Diagrama Entidad-Relación (ER)\nSistema de Gestión de Horarios Escolares Chronos\nCardinalidades: 1:1 (uno a uno), 1:N (uno a muchos), N:M (muchos a muchos)

package "Módulo de Usuarios y Roles" #LightBlue {
    entity "rol" as rol {
        * **nombre_rol** : VARCHAR(50) <<PK>>
        --
        descripcion : TEXT
    }
    
    entity "usuario" as usuario {
        * **id_usuario** : INTEGER <<PK>>
        --
        * **cedula** : VARCHAR(8) <<UNIQUE>>
        * nombre : VARCHAR(100)
        * apellido : VARCHAR(100)
        email : VARCHAR(150)
        telefono : VARCHAR(20)
        * contrasena_hash : VARCHAR(255)
    }
    
    entity "usuario_rol" as usuario_rol {
        * **id_usuario** : INTEGER <<PK,FK>>
        * **nombre_rol** : VARCHAR(50) <<PK,FK>>
    }
    
    entity "docente" as docente {
        * **id_docente** : INTEGER <<PK>>
        --
        * id_usuario : INTEGER <<FK>>
        trabaja_otro_liceo : BOOLEAN
        fecha_envio_disponibilidad : DATE
        horas_asignadas : INTEGER
        porcentaje_margen : NUMERIC(5,2)
    }
    
    entity "padre" as padre {
        * **id_padre** : INTEGER <<PK>>
        --
        * id_usuario : INTEGER <<FK>>
    }
    
    usuario ||--o{ usuario_rol : "tiene\n(1,N)"
    rol ||--o{ usuario_rol : "asignado a\n(1,N)"
    usuario ||--o| docente : "es\n(1,1)"
    usuario ||--o| padre : "es\n(1,1)"
}

package "Módulo de Horarios y Bloques" #LightGreen {
    entity "bloque_horario" as bloque_horario {
        * **id_bloque** : INTEGER <<PK>>
        --
        * hora_inicio : TIME
        * hora_fin : TIME
    }
    
    entity "disponibilidad" as disponibilidad {
        * **id_disponibilidad** : INTEGER <<PK>>
        --
        * id_docente : INTEGER <<FK>>
        * id_bloque : INTEGER <<FK>>
        * dia : VARCHAR(20)
        disponible : BOOLEAN
    }
    
    docente ||--o{ disponibilidad : "tiene\n(1,N)"
    bloque_horario ||--o{ disponibilidad : "define\n(1,N)"
}

package "Módulo de Grupos y Materias" #LightYellow {
    entity "grupo" as grupo {
        * **id_grupo** : INTEGER <<PK>>
        --
        * nombre : VARCHAR(100)
        * nivel : VARCHAR(50)
    }
    
    entity "pauta_anep" as pauta_anep {
        * **id_pauta_anep** : INTEGER <<PK>>
        --
        * nombre : VARCHAR(200)
        * dias_minimos : INTEGER
        * dias_maximos : INTEGER
        condiciones_especiales : TEXT
    }
    
    entity "materia" as materia {
        * **id_materia** : INTEGER <<PK>>
        --
        * nombre : VARCHAR(200)
        * horas_semanales : INTEGER
        * id_pauta_anep : INTEGER <<FK>>
        en_conjunto : BOOLEAN
        id_grupo_compartido : INTEGER <<FK>>
        es_programa_italiano : BOOLEAN
    }
    
    entity "grupo_materia" as grupo_materia {
        * **id_grupo** : INTEGER <<PK,FK>>
        * **id_materia** : INTEGER <<PK,FK>>
        --
        * horas_semanales : INTEGER
        fecha_asignacion : TIMESTAMP
    }
    
    entity "docente_materia" as docente_materia {
        * **id_docente** : INTEGER <<PK,FK>>
        * **id_materia** : INTEGER <<PK,FK>>
    }
    
    entity "padre_grupo" as padre_grupo {
        * **id_padre** : INTEGER <<PK,FK>>
        * **id_grupo** : INTEGER <<PK,FK>>
        --
        fecha_asignacion : TIMESTAMP
    }
    
    grupo ||--o{ grupo_materia : "tiene\n(1,N)"
    materia ||--o{ grupo_materia : "asignada a\n(1,N)"
    pauta_anep ||--o{ materia : "define\n(1,N)"
    grupo ||--o{ materia : "grupo compartido\n(0,1)"
    docente ||--o{ docente_materia : "enseña\n(1,N)"
    materia ||--o{ docente_materia : "impartida por\n(1,N)"
    padre ||--o{ padre_grupo : "tiene hijo en\n(1,N)"
    grupo ||--o{ padre_grupo : "tiene padres\n(1,N)"
}

package "Módulo de Horarios" #LightCoral {
    entity "horario" as horario {
        * **id_horario** : INTEGER <<PK>>
        --
        * id_grupo : INTEGER <<FK>>
        * id_docente : INTEGER <<FK>>
        * id_materia : INTEGER <<FK>>
        * id_bloque : INTEGER <<FK>>
        * dia : VARCHAR(20)
    }
    
    grupo ||--o{ horario : "tiene\n(1,N)"
    docente ||--o{ horario : "tiene\n(1,N)"
    materia ||--o{ horario : "asignada en\n(1,N)"
    bloque_horario ||--o{ horario : "define\n(1,N)"
}

package "Módulo de Publicación" #LightPink {
    entity "publicacion" as publicacion {
        * **id_publicacion** : SERIAL <<PK>>
        --
        fecha_publicacion : TIMESTAMP
        publicado_por : INTEGER <<FK>>
        * activo : BOOLEAN
        descripcion : TEXT
    }
    
    entity "horario_publicado" as horario_publicado {
        * **id_horario_publicado** : SERIAL <<PK>>
        --
        * id_publicacion : INTEGER <<FK>>
        * id_grupo : INTEGER <<FK>>
        * id_docente : INTEGER <<FK>>
        * id_materia : INTEGER <<FK>>
        * id_bloque : INTEGER <<FK>>
        * dia : VARCHAR(20)
    }
    
    entity "solicitud_publicacion" as solicitud_publicacion {
        * **id_solicitud** : INTEGER <<PK>>
        --
        fecha_solicitud : TIMESTAMP
        * solicitado_por : INTEGER <<FK>>
        * estado : VARCHAR(20)
        revisado_por : INTEGER <<FK>>
        fecha_revision : TIMESTAMP
        notas : TEXT
        * snapshot_hash : VARCHAR(64)
        id_publicacion : INTEGER <<FK>>
    }
    
    publicacion ||--o{ horario_publicado : "contiene\n(1,N)"
    grupo ||--o{ horario_publicado : "en\n(1,N)"
    docente ||--o{ horario_publicado : "en\n(1,N)"
    materia ||--o{ horario_publicado : "en\n(1,N)"
    bloque_horario ||--o{ horario_publicado : "en\n(1,N)"
    usuario ||--o{ publicacion : "publica\n(0,N)"
    usuario ||--o{ solicitud_publicacion : "solicita\n(0,N)"
    usuario ||--o{ solicitud_publicacion : "revisa\n(0,1)"
    publicacion ||--o| solicitud_publicacion : "genera\n(0,1)"
}

package "Módulo de Observaciones" #LightGray {
    entity "observacion_predefinida" as observacion_predefinida {
        * **id_observacion_predefinida** : INTEGER <<PK>>
        --
        * texto : TEXT
        es_sistema : BOOLEAN
        activa : BOOLEAN
    }
    
    entity "observacion" as observacion {
        * **id_observacion** : INTEGER <<PK>>
        --
        * id_docente : INTEGER <<FK>>
        id_observacion_predefinida : INTEGER <<FK>>
        * tipo : VARCHAR(50)
        descripcion : TEXT
        motivo_texto : TEXT
    }
    
    docente ||--o{ observacion : "tiene\n(1,N)"
    observacion_predefinida ||--o{ observacion : "usada en\n(0,N)"
}

package "Módulo de Auditoría" #LightCyan {
    entity "log" as log {
        * **id_log** : INTEGER <<PK>>
        --
        * id_usuario : INTEGER <<FK>>
        * accion : VARCHAR(200)
        fecha : TIMESTAMP
        detalle : TEXT
    }
    
    usuario ||--o{ log : "genera\n(1,N)"
}

note right of usuario_rol
  **Relación N:M**
  Usuario puede tener
  múltiples roles
  Rol puede tener
  múltiples usuarios
end note

note right of grupo_materia
  **Relación N:M**
  Currícula: materias
  asignadas a cada grupo.
  Un grupo tiene muchas materias,
  una materia puede estar en
  múltiples grupos
end note

note right of padre_grupo
  **Relación N:M**
  Un padre puede tener hijos
  en múltiples grupos.
  Un grupo tiene múltiples padres
end note

note right of docente_materia
  **Relación N:M**
  Un docente puede enseñar
  múltiples materias.
  Una materia puede ser enseñada
  por múltiples docentes
end note

note right of horario_publicado
  **Snapshot**
  Copia inmutable de horarios
  al momento de publicar.
  Una publicación contiene
  muchos horarios publicados
end note

note bottom of usuario
  **Relación 1:1**
  Un usuario es
  EITHER docente OR padre
  (no ambos)
end note

legend right
  |= Notación |= Significado |
  | **||--o|** | 1:1 (uno a uno) |
  | **||--o{** | 1:N (uno a muchos) |
  | **}o--o{** | N:M (muchos a muchos) |
  | **(0,1)** | Opcional (0 o 1) |
  | **(1,N)** | Obligatorio (1 o muchos) |
  | **(0,N)** | Opcional (0 o muchos) |
endlegend

@enduml
